# big-freeze

./: CMakeLists.txt  README.md  big_freeze.cpp  cosmology.h
docs/superpowers/plans/: 2026-06-07-big-freeze-simulation.md
docs/superpowers/specs/: 2026-06-07-big-freeze-simulation-design.md
shaders/: blur.frag  bright.frag  composite.frag  fullscreen.vert  grid.frag  grid.vert  hud.frag  hud.vert  points.frag  points.vert  star.frag  star.vert  void.frag
tests/: test_cosmology.cpp
